brat/test/golden/error/toplevel-leftovers2.brat.golden
Error in test/golden/error/toplevel-leftovers2.brat on line 2:
f(x) = x
       ^

  Type mismatch when checking x => 「x」

Expected: (1 :: Nat, 2 :: Bool)
But got:  (1 :: Nat)


